# obs-studio

./: .gitignore  CMakeLists.txt
UI/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-projector.cpp  window-projector.hpp
UI/obs-frontend-api/: CMakeLists.txt
cmake/Modules/: CopyMSVCBins.cmake  FindJansson.cmake  FindMQTT.cmake  FindZMQ.cmake
libobs/: CMakeLists.txt  obs-hotkey-name-map.c  obs-windows.c  obs.c  obs.h
obs/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-projector.cpp
plugins/: CMakeLists.txt
plugins/coreaudio-encoder/: CMakeLists.txt
plugins/decklink/: decklink.hpp
plugins/decklink/win/: CMakeLists.txt
plugins/image-source/: CMakeLists.txt
plugins/obs-ffmpeg/: CMakeLists.txt
plugins/obs-filters/: CMakeLists.txt
plugins/obs-outputs/: CMakeLists.txt  rtmp-windows.c
plugins/obs-outputs/librtmp/: rtmp.h
plugins/obs-qsv11/: CMakeLists.txt  QSV_Encoder.cpp  QSV_Encoder_Internal.cpp
plugins/obs-text/: CMakeLists.txt
plugins/obs-text/gdiplus/: obs-text.cpp
plugins/obs-transitions/: CMakeLists.txt
plugins/obs-x264/: CMakeLists.txt
plugins/rtmp-services/: CMakeLists.txt
plugins/tally/: CMakeLists.txt  tally-source.c
plugins/tally-destination/: CMakeLists.txt  tally-destination.c
plugins/tally-switcher/: CMakeLists.txt  README.md  Tally.cpp  Tally.h  TallySettings.cpp  TallySettings.h  tally-switcher.cpp
plugins/tally-switcher/data/locale/: de-DE.ini  en-US.ini
plugins/tally/data/locale/: de-DE.ini  en-US.ini
plugins/text-freetype2/: CMakeLists.txt
plugins/vlc-video/: CMakeLists.txt  vlc-video-plugin.c
plugins/win-capture/: CMakeLists.txt  cursor-capture.c  duplicator-monitor-capture.c  nt-stuff.h  plugin-main.c
plugins/win-dshow/: CMakeLists.txt  win-dshow.cpp
plugins/win-mf/: CMakeLists.txt  mf-common.hpp  mf-encoder-descriptor.cpp
plugins/win-wasapi/: CMakeLists.txt  win-wasapi.cpp
